<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_hw_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="monish.saxena92@gmail.com">instillmotion</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_msgs</depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>roboforge_moveit_config</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
